@@ -49,18 +49,38 @@ if [ "$CK_CPU_ONLINE" != "" ]; then
 fi
 
 if [ "$online" == "1" ] ; then
-  echo "    Bringing all CPU online ..."
+  echo "    Setting CPU cores ..."
+
   for cpudir in /sys/devices/system/cpu/cpu*
   do
     if [ -f "$cpudir/online" ] ; then
-      echo $online | sudo tee $cpudir/online >/dev/null
+      # Check individual cores
+      XONLINE=$online
+
+      CPU_NUM=${cpudir:27:29}
+      VAR_CPU_NUM=CK_CPU${CPU_NUM}_ONLINE
+      if [ "${!VAR_CPU_NUM}" != "" ]; then
+         XONLINE="${!VAR_CPU_NUM}"
+      fi
+
+      echo "      * CPU $CPU_NUM = ${XONLINE}"
+
+      echo $XONLINE | sudo tee $cpudir/online >/dev/null
     fi
   done
 fi
 
 for cpudir in /sys/devices/system/cpu/cpu*
 do
-  if [ -d "$cpudir/cpufreq" ] && [ -f "$cpudir/cpufreq/scaling_governor" ] ; then
+
+  CPU_NUM=${cpudir:27:29}
+  VAR_CPU_NUM=CK_CPU${CPU_NUM}_ONLINE
+
+  if [ -d "$cpudir/cpufreq" ] && 
+     [ -f "$cpudir/cpufreq/scaling_governor" ] &&
+     [ -f "$cpudir/online" ] && 
+     [ "${!VAR_CPU_NUM}" != "0" ]; then
+
     echo "*** Processing $cpudir ..."
 
     echo "    Setting $governer state ..."
